<resources>
    <string name="app_name">PhenieBook</string>
    <string name="qidong">qidongjiemain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pull_to_refresh_top_pull">下拉刷新</string>

    <string name="pull_to_refresh_top_release">释放刷新</string>

    <string name="pull_to_refresh_top_refreshing">加载中...</string>

    <string name="pull_to_refresh_bottom_pull">继续拖动</string>

    <string name="pull_to_refresh_bottom_release">放开装载更多</string>

    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>
    <string name="txt_choose">请选择场地类型</string>
    <string name="des_btn_bad">羽毛球场</string>
    <string name="des_btn_ten">网球场</string>
    <string name="des_btn_tab">乒乓球场</string>
    <string name="des_btn_bill">台球场</string>
    <string name="btn_rechoose">更换场地类型</string>
    <string name="icon_crt1">场地一图片</string>
    <string name="icon_crt2">场地二图片</string>
    <string name="icon_crt3">场地三图片</string>
    <string name="rdo_info_label">资讯</string>
    <string name="rdo_part_label">球友</string>
    <string name="rdo_choose_label">选择</string>
    <string name="rdo_shop_label">商店</string>
    <string name="rdo_my_label">我的</string>
    <string name="img_qq">ssss</string>
    <string name="label_userid">用户账号</string>
    <string name="label_bookdate">预订日期</string>
    <string name="label_booktime">预定时间</string>
    <string name="label_bookhour">预定时长</string>
    <string name="label_courtid">场地编号</string>
    <string name="label_price">场地价格</string>
    <string name="btn_confirm">确定</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="spin_prompt"> 请选择约球类型 </string>


    <string-array name="ptnType">
        <item>羽毛球</item>
        <item>网球</item>
        <item>乒乓球</item>
        <item>台球</item>
    </string-array>
    <string-array name="bookHour">
        <item>1小时</item>
        <item>2小时</item>
    </string-array>
    <string name="tv_bookShow">预约成功！</string>
    <string name="tv_bookShowHint">请在预约时间内到达场地！</string>
    <string name="tv_orderShow">订单信息</string>
    <string name="label_cost">总价</string>
    <string name="label_tv_userid">我的账号</string>
    <string name="label_tv_username">用户姓名</string>
    <string name="label_balance">我的余额</string>
    <string name="btn_myorder">  我的场地预约</string>
    <string name="btn_mypartner">  我发布的球友信息</string>
    <string name="btn_myshop">  我购买的历史商品</string>
    <string name="btn_cpass">修改密码</string>
    <string name="btn_aboutUs">关于我们</string>
    <string name="tv_myorder">历史场地预约</string>
    <string name="btn_return">返回</string>

    <string name="tv_mypartner">历史约球信息</string>
    <string name="tv_myshop">购物历史</string>
    <string name="tv_curpass">请输入当前密码：</string>
    <string name="label_newpass">请输入新密码：</string>
    <string name="label_passagain">请再次输入新密码：</string>
    <string name="tv_us">PheineBook 1.0</string>
    <string name="tv_team">Sandwich Team 版权所有</string>
    <string name="tv_1">Copyright@2017 Sandwich.</string>
    <string name="tv_2">All Rights Reserved.</string>

    <!--LoginActivity-->
    <string name="verifycode">获取验证码</string>
    <string name="change_password">账号密码登录</string>
    <string name="login_register">没有密码，去注册</string>

    <!--PartnerFragment-->
    <string name="appoint_item_date">约球日期</string>
    <string name="appoint_item_type">体育类型</string>
    <string name="appoint_item_host">发起者</string>
    <string name="appoint_item_request">球友要求</string>

</resources>
