<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.yesq.pheniebook.AboutUsActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:background="@android:color/background_light"
        android:contentDescription="@string/img_qq"
        app:srcCompat="@drawable/icon_app" />

    <TextView
        android:id="@+id/tv_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/tv_us"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal"
        android:text="非你不可"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_weight="0.16" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_team"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_1"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/tv_2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
</LinearLayout>
