<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yesq.pheniebook.ChooseFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="left|center_vertical"
            android:text="  请选择场地类型"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="aaa"
        android:textSize="36sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btn_badmin"
            android:layout_width="180dp"
            android:layout_height="113dp"
            android:background="@drawable/badminton"
            android:contentDescription="@string/des_btn_bad" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0.01dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/btn_tennis"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:background="@drawable/tennis"
            android:contentDescription="@string/des_btn_ten" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/colorPrimary"
        android:textSize="0.01dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/btn_table"
            android:layout_width="180dp"
            android:layout_height="106dp"
            android:background="@drawable/tabletennis"
            android:contentDescription="@string/des_btn_tab" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="0.01dp"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            android:text="TextView" />

        <ImageButton
            android:id="@+id/btn_billiards"
            android:layout_width="180dp"
            android:layout_height="108dp"
            android:background="@drawable/snooker"
            android:contentDescription="@string/des_btn_bill" />
    </LinearLayout>

</LinearLayout>
