<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yesq.pheniebook.LoginActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_img_user"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/user" />

        <EditText
            android:id="@+id/login_edit_user"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start"
            android:hint="请输入您的手机号"
            android:inputType="number"
            />

        <Button
            android:id="@+id/login_btn_verifycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifycode" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/login_img_psw"
            android:layout_width="30dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/login_edit_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="left|center"
            android:hint="请输入验证码"
            android:inputType="textPassword" />
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/login_btn_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="登录"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/login_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/login_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register" />
    </TableRow>

</TableLayout>

